# Project1OOP

./: .gitignore  CMakeLists.txt  main.cpp
backend/include/: Capacitor.h  Circuit.h  CircuitElement.h  ComplexMatrixSolver.h  CurrentSource.h  FileManager.h  IdealDiode.h  Inductor.h  MatrixSolver.h  Node.h  Resistor.h  SinusoidalVoltageSource.h  VoltageSource.h  ZenerDiode.h
backend/src/: Capacitor.cpp  Circuit.cpp  CircuitElement.cpp  ComplexMatrixSolver.cpp  CurrentSource.cpp  IdealDiode.cpp  Inductor.cpp  Node.cpp  Resistor.cpp  SinusoidalVoltageSource.cpp  VoltageSource.cpp  ZenerDiode.cpp
frontend/Graphics/: acsweepdialog.ui  mainwindow.ui  nodelibrarydialog.ui  phasesweepdialog.ui  plotdialog.ui  propertiesdialog.ui  sinusoidalsourcedialog.ui  transientdialogbox.ui
frontend/include/: acsweepdialog.h  circuitescene.h  graphicalcapacitor.h  graphicalcomponent.h  graphicalcurrentsourcedc.h  graphicalground.h  graphicalinductor.h  graphicalresistor.h  graphicalvoltagesourcedc.h  graphicalvoltagesourcesin.h  graphicalwire.h  mainwindow.h  nodelabelitem.h  nodelibrarydialog.h  phasesweepdialog.h  plotdialog.h  propertiesdialog.h  sinusoidalsourcedialog.h  transientdialogbox.h
frontend/src/: acsweepdialog.cpp  circuitescene.cpp  graphicalcapacitor.cpp  graphicalcomponent.cpp  graphicalcurrentsourcedc.cpp  graphicalground.cpp  graphicalinductor.cpp  graphicalresistor.cpp  graphicalvoltagesourcedc.cpp  graphicalvoltagesourcesin.cpp  graphicalwire.cpp  mainwindow.cpp  nodelabelitem.cpp  nodelibrarydialog.cpp  phasesweepdialog.cpp  plotdialog.cpp  propertiesdialog.cpp  sinusoidalsourcedialog.cpp  transientdialogbox.cpp
include/: Capacitor.h  Circuit.h  CircuitElement.h  CurrentSource.h  IdealDiode.h  Inductor.h  Node.h  Resistor.h  SinusoidalVoltageSource.h  VoltageSource.h  ZenerDiode.h
src/: Capacitor.cpp  Circuit.cpp  CircuitElement.cpp  CurrentSource.cpp  FileManager.cpp  IdealDiode.cpp  Inductor.cpp  MatrixSolver.cpp  Node.cpp  Resistor.cpp  SinusoidalVoltageSource.cpp  VoltageSource.cpp  ZenerDiode.cpp
